assets/style/index.css
@charset "utf-8";
@import"./reset.css";

body {
    font-family: "Playfair", "Montserrat";
    background: linear-gradient(to bottom, #93879d, #c7b9d6); 
    color: #fff;
}

.container{
    width:min(100% - 30px, 1080px);
    margin-inline: auto;
}

header {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 250px;
    background-color: transparent; 
}

#header-logo {
    margin-left: 60px;
}

#header-menu {
    display: flex;
    gap: 30px;
    margin-bottom: 10px;
}

a,
#login-menu-btn {
    text-decoration: none;
    font-size: 2rem;
    font-weight: 600;
    color: #e7e6e9;
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
    transition: transform 0.3s ease-in-out;
}

a:hover,
#login-menu-btn:hover {
    transform: translateY(-3px);
    color: #ffffff;
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);  
}

#login-menu-btn{
    background-color: transparent;
    margin-bottom: 10px;
}

.hidden {
    display: none;
}

#login-modal {
    position: absolute;
    top: 110px; 
    right: 120px; 
    background: rgba(157, 155, 155, 0.25);
    border-radius: 10px;
    padding: 20px ;
    box-shadow: 0 6px 18px rgba(0,0,0,0.25);
    animation: dropdown 0.6s ease-in-out;
    z-index: 10;
}

@keyframes dropdown {
    from {
        opacity: 0;
        transform: translateY(-10px);
    }
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

#login-form {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

#login-form input {
    padding: 5px 10px;
    border-radius: 8px;
    background: rgba(193, 192, 192, 0.35);
    box-shadow: 0 2px 5px rgba(0,0,0,0.25);
    color: #fff;
    
}

#login-form button {
    margin-top: 10px;
    padding: 5px;
    border-radius: 8px;
    background: #675a70;
    color: #fff;
    font-size: 1.5rem;
    font-weight: 600;
    cursor: pointer;
    transition: 0.3s ease-in-out;
}

#login-form button:hover {
    background-color: #5c4c6e;
    color: #ffffff;
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
}


.hero-banner {
    width: 100%;
    display: flex;
    justify-content: center;
    padding: 40px 0;
}

.hero-image-box {
    width: 80%;
    max-width: 1100px;
    height: 500px;
    position: relative;
    overflow: hidden;
    border-radius: 5px;
}

.slide {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: none;
}

.slide.active {
    display: block;
}

.hero-text-bar {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(80, 80, 80, 0.45);
    padding: 20px 30px;
    text-align: center;
    width: 50%;
}

.hero-text-bar h1 {
    color: white;
    font-size: 22px;
    font-weight: normal;
    letter-spacing: 1px;
}

.quote-it {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    padding: 20px 0;
    font-size: 1.7rem;
    font-style: italic;
    letter-spacing: 1px;
}

/* Adds the thin lines on the sides of the quote */
.quote-it::before, .quote-it::after {
    content: "";
    flex: 1;
    height: 1px;
    background: rgba(255, 255, 255, 0.3);
    max-width: 100px;
}



#services-overview {
    padding: 80px 20px 60px;
    background: transparent;
}

.section-title {
    text-align: center;
    font-size: 3rem;
    margin-top: -20px;
    margin-bottom: 60px;
    letter-spacing: 4px;
    font-weight: 300;
    font-style: italic;
    color: #fff;
    text-transform: uppercase;
}

.service-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr); 
    gap: 25px;
    width: 100%; 
    max-width: 1200px;
    margin: 0 auto; 
}

.service-col {
    background: rgba(255, 255, 255, 0.1); 
    overflow: hidden;
    border-radius: 15px; 
    transition: all 0.4s ease;
    border: 1px solid rgba(255, 255, 255, 0.2);
    display: flex;
    flex-direction: column;
}

.service-col a {
    display: flex;
    text-decoration: none;
    flex-direction: column;
    height: 100%;
}

.service-col img {
    width: 100%;
    height: 380px;
    object-fit: cover;
    display: block;
    transition: transform 0.6s ease;
}

.service-col h3 {
    font-size: 1.5rem;
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #fff;
    font-family: "Montserrat";
    text-align: center;
    padding: 25px 10px;
    margin: 0;
    background: rgba(0, 0, 0, 0.3);
}

.service-col:hover img {
    transform: scale(1.08);
}


#scrolling-gallery {
    margin: 60px 0;
    margin-bottom: 20px;
    overflow: hidden;
    width: 100%;
}

#about {
    max-width: 1080px;
    margin: 60px 0;
    padding: 0 20px;
}

#about h2 {
    font-size: 3rem;
    font-style: italic;
    text-align: center;
    margin-bottom: 60px;
    color: #fff;
    letter-spacing: 0.5px;
    text-shadow: 1px 1px 3px rgba(0,0,0,0.35);
}


.about-content {
    display: flex;
    align-items: center;
    gap: 50px;
    background-color:rgba(0,0,0,0.2);
    border-radius: 5px;
    padding: 50px 60px 35px 60px;
    box-shadow: 0 8px 24px rgba(0,0,0,0.25);
}


#about-image {
    width: 340px;
    border-radius: 5px;
    box-shadow: 0 8px 12px rgba(0,0,0,0.35);
    margin-bottom: 70px;
    margin-right: 10px;
    
}

.about-text-box {
    display: flex;
    flex-direction: column;
    gap: 18px;
}

.about-text-box p {
    font-size: 1.9rem;
    line-height: 1.8;
    color: #f7f7f9;
    text-shadow: 1px 1px 3px rgba(0,0,0,0.35);
    letter-spacing: 0.2px;
}

.know-more-container {
    display: flex;
    justify-content: flex-end;
    margin-top: 10px;
}
#know-more-btn {
    display: flex;
    justify-content: center;
    background-color:  #675a70;
    max-width: 150px;
    border-radius: 50px;
    padding: 10px 25px;
}


.consult {
    padding: 100px 5%;
    text-align: center;
    background: rgba(0,0,0,0.2);
    margin: 120px 0 60px;
    border-radius: 5px;
    box-shadow: 0 8px 24px rgba(0,0,0,0.25);
}
/* ... */

